--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@
 body{
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: auto;
+    background-color: #fafafa;
+    width: 100vw;
+    height: 100vh;
     color: rgb(0, 0, 0);
-    background-color: rgb(255, 255, 255);
 
 }
 
@@ -28,29 +30,58 @@ p{
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 1fr;
-    padding: 50px;
+    padding: 90px;
 }
-.navigation {
-    background-color:#03182E;
-    width: 100vw;
+header{
+    background-color:#03182e;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    height: 80px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+nav{
+    
+    width: 97.5%;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+}
+nav section{
     height: 100%;
     display: flex;
     align-items: center;
-    box-sizing: border-box;
-    flex-direction: row;
 }
+.logo{
+    width: 183.78px;
+    margin-right: 24px;
+    margin-top: 19px;
+   
+}
+
 .buttons_nav{
             display: flex;
             align-items: center;
             flex: 1;
 }
-.buttons_nav li{
-            display: flex;
-            flex-direction:row-reverse;
-            justify-content:baseline;
-            align-items: center;
-            margin: 1px;
+nav .burguer, nav .search{
+    width: 24px;
+    height: 24px;
+    margin-left: 7px;
+    padding-left: 30px;
 }
+.buttons_nav li{
+            margin-right: 24px;
+            list-style: none;
+            margin-left: 7px;
+            
+}
+nav section a {
+    font-size: 1rem;
+    text-decoration: none;
+    color: white;
+}
+
 .buttons_nav_droite{
     order: 3;
     display: flex;
@@ -60,19 +91,26 @@ p{
     justify-content: flex-end;
 }
 .buttons_nav_droite li {
-            display: flex;
-            flex-direction: row-reverse;
-            align-items: center;
-            justify-content: center;
-            flex: 1;
+            padding: 5px 19px 5px 19px;
+            font-size: 14px;
+            border-radius: 8px;
+            list-style: none;
 }
-.logo{
-    display: flex;
-            width: 30%;
-            order: 2;
-            flex: 3;
+.button_sub{
+    font-size: 14px;
+    background-color: #a71600;
+   margin-right: 0px;
+   padding: 5px 19px 5px 19px;
+   border-radius: 8px;
+   border-style: none;
+   color: white;
+}
+.login {
+    font-size: 14px;
+    margin-right: 0px;
+}
     
-}
+
 .buttons_nav a{
     color: white;
     text-decoration: none;
@@ -81,12 +119,7 @@ p{
     color: white;
     text-decoration: none;
 }
-.button_sub{
-    font-size: 20px;
-    background-color: red;
-    border-radius: 12%;
-    padding: 9px;
-}
+
 .pointillets{
     border-bottom: dotted;
 }
