--- a/style.css
+++ b/style.css
@@ -1,40 +1,161 @@
-
-main {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    font-family: Georgia, "Times New Roman", Times, serif;
+    line-height: auto;
+    background-color: #fafafa;
+    width: 100vw;
+    height: 100vh;
+    color: rgb(0, 0, 0);
     
-    width: 100%;
-    height: 100%;
-    border-left: 2px solid #dddddd;
-    font-size:   18px;
-    line-height: 1.6rem; 
   }
-  main section {
-    position: relative;
-    left: 22px;
-    width: 734px;
-  }
-  main .path ul {
+ 
+header {
+  background-color: #03182e;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  height: 80px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+      nav {
+        width: 97.5%;
+        display: flex;
+        justify-content: space-between;
+        color: white;
+      }
+      nav section {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        
+      }
+      .logo {
+        width: 183.78px;
+        margin-right: 24px;
+        margin-top: 19px;
+      }
+      
+      .buttons_nav {
+        display: flex;
+        align-items: center;
+        flex: 1;
+      }
+      nav .burguer,
+    nav .search {
+      width: 24px;
+      height: 24px;
+      margin-left: 7px;
+      padding-left: 30px;
+      position:absolute
+    }
+    .buttons_nav li {
+      margin-right: 24px;
+      list-style: none;
+      margin-left: 7px;
+    }
+    nav section a {
+      font-size: 1rem;
+      text-decoration: none;
+      color: white;
+    }
+
+    .buttons_nav_droite {
+      order: 3;
+      display: flex;
+      flex: 5;
+      align-items: center;
+      margin-right: 5px;
+      justify-content: flex-end;
+    }
+    .buttons_nav_droite li {
+      padding: 5px 19px 5px 19px;
+      font-size: 14px;
+      border-radius: 8px;
+      list-style: none;
+    }
+    .button_sub {
+      font-size: 14px;
+      background-color: #a71600;
+      margin-right: 0px;
+      padding: 5px 19px 5px 19px;
+      border-radius: 8px;
+      border-style: none;
+      color: white;
+    }
+    .login {
+        font-size: 14px;
+        margin-right: 0px;
+      }
+      
+      .buttons_nav a {
+        color: white;
+        text-decoration: none;
+      }
+      .buttons_nav_droite {
+        color: white;
+        text-decoration: none;
+      }  
+
+
+main{
+  display: grid; 
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 285px repeat(2, 1fr);
+  grid-column-gap: 10px;
+  border: #D0D7DE solid 1px; 
+  padding-left: 20px;
+  background-color: white;
+}
+
+
+
+.contenu_principal{
+grid-column: 1/2;
+grid-row: 1/2;
+padding:50px;
+border:2px solid color(grey) ;
+margin-top: 40px;
+}
+
+
+.historique{
+  margin-bottom: 30px;
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.biographie{
+ text-decoration: none;
+ font-size: large;
+
+  
+}
+
+.historique ul {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     color: #0000ee;
     display: flex;
     left: 22px;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 500;
     margin-top: 22px;
+    margin-left: 50px;
+    gap: 10px;
     
-  }
-  main .path ul li {
-      list-style: none;
-  }
-  main .path ul li {
+    
+}
+
+.historique ul li {
     list-style: none;
-    color: #0000ee;
-}
-.contenu_principal{
- 
-
+    color: rgb(34, 34, 158);
 }
 
-.contenu_principal h1 p {
+
+.contenu_principal h1  {
     margin-bottom: 15px;
     font-size: 20px;
 }
@@ -42,59 +163,93 @@ main {
     font-size: 31.458px;
     margin-bottom: 8px;
 }
-.contenu_principal .buttons_menu button  {
+.contenu_principal .buttons_tools button  {
     background-color: white;
     border: 1px solid #dddddd;
     padding: 9px 7px 9px 7px;
     border-radius: 8px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    flex-direction: row;
+    flex-wrap:nowrap;
+
+    
 }
 
-.contenu_principal .buttons_menu button a {
+.contenu_principal .buttons_tools button a {
     display: flex;
     color: #14599d;
-    gap: 7px;
+    gap: 5px;
     text-decoration: none;
-    width: 120px;
-    height: 18px;
-    font-size: 18px;
-}
-
-aside {
-  
-    margin-top: 180px;
-    padding: 22px;
-    border: 2px solid #dddddd;
-    font-family: "Segoe UI", sans-serif;
-}
-aside img {
-    width: 236px;
-    height: 178px;
-    object-fit: cover;
-    object-position: center;
-}
-aside button {
-    width: 199px;
-    background-color: white;
-    border: 1px solid #dddddd;
-    padding: 10.5px 17.5px 10.5px 17.5px;
-    border-radius: 8px;
-    align-self: center;
-}
-aside button a {
-    color: #14599d;
-    font-weight: 700;
-    gap: 6px;
-    text-decoration: none;
-}
-aside a {
-    align-self: center;
-}
-
-
-
-
-aside p {
-    margin-bottom: 12px;
+    width: px;
+    height: 15px;
     font-size: 16px;
-    line-height: 1.4rem;
+    
 }
+.biographie{
+  text-decoration: none;
+}
+.alternate{
+  margin-bottom: 5px;
+  font-size: 0.8em;
+  color: #979797;
+}
+.auteur{
+text-decoration: none;
+font-size: 14px;
+margin-bottom: 10px;
+}
+.presentation_lee{
+  grid-column: 2/3;
+  grid-row: 2/3;
+  display: grid;
+  grid-template-columns:  repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+aside {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  border: #D0D7DE solid 1px;
+  justify-content: space-between;
+  padding-left: 20px;
+  padding-right: 20px;
+  align-items: center;
+  padding-bottom: 20px;
+}
+      aside img {
+        padding-top: 10px;
+        width: 250px;
+        height: 270px;
+    }
+        
+      
+
+      aside button {
+          width: 199px;
+          background-color: white;
+          border: 1px solid #dddddd;
+          padding: 10.5px 17.5px 10.5px 17.5px;
+          border-radius: 8px;
+          align-self: center;
+      }
+
+      aside button a {
+          color: #14599d;
+          font-weight: 700;
+          gap: 6px;
+          text-decoration: none;
+      }
+
+      aside a {
+          align-self: center;
+      }
+
+      aside p {
+          margin-bottom: 12px;
+          font-size: 16px;
+          line-height: 1.4rem;
+      }
+
